Combine frontend with backend